this is a new restaurant menu for an indian restaurant in my area

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Cinnamon-the flavour of India</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -20,10 +20,11 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>Cinnamon</h1></a>
+            <h2>The Flavour of India</h2>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>KBS Certified</span>
             </p>
           </div>
 
@@ -54,8 +55,10 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+              <a href="tel:0784113344,0112204462,0786633664,0750102102">
+                <span><li class="hidden-xs">Ngong Road:0784113344,0112204462</li>
+                      <li class="hidden-xs">Mombasa Road:0786633664,0750102102</li>
+      </span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -64,9 +67,9 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
+    <a class="btn" href="tel:+254703358858">
     <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
+    +2547033588585
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
@@ -85,17 +88,27 @@
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          Nairobi<br>
+          The Junction Mall, Mezzanine floor, Ngong Road.<br>
+          Tel:0784113344,0112204462<br><hl>
+            Capital Center, Ground floor, Mombasa Road<br>
+            Tel:0786633664,0750102102
+
+          <p>* Delivery & Bookings available<br> 
+            <br>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+          <p>"The best Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="row"> 
+        <div class="col-lg-4 col-md-6 col-sm-12" id="sp_logo_1" alt="jumia"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12" id="sp_logo_2" alt="glovo"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12" id="sp_logo_3" alt="ubereats"></div>
+      </div>
+      <div class="text-center">&copy; Copyright Cinnamon</div>
     </div>
   </footer>
 
