--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -12,9 +12,9 @@
         </a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
+        <a href="https://www.google.com/maps/place/Cinnamon+The+Flavor+Of+India/@-1.3038138,36.7711766,15z/data=!4m9!1m2!2m1!1scinnamon+kenya+location!3m5!1s0x182f1b0bcb53422b:0x86b7839ff789f638!8m2!3d-1.2984474!4d36.7622442!15sChdjaW5uYW1vbiBrZW55YSBsb2NhdGlvbloQIg5jaW5uYW1vbiBrZW55YZIBCnJlc3RhdXJhbnQ" target="_blank">
           <div id="map-tile">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15955.141377238499!2d36.77117659775885!3d-1.3038137695694252!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1b0bcb53422b%3A0x86b7839ff789f638!2sCinnamon%20The%20Flavor%20Of%20India!5e0!3m2!1sen!2ske!4v1647304924940!5m2!1sen!2ske" width="875" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <span>map</span>
           </div>
         </a>
